--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,23 @@ h1, h2{
     font-family: 'Courier New', Courier, monospace; 
 }
 
+#graph{
+    transform: translateY(-60px);
+}
+
 #legend{
-    padding: 20px;
+    /* padding: 20px;
+     */
+    /* border: black, solid, 10px; */
+    /* background-color: blue; */
     font-family: 'Courier New', Courier, monospace; 
+    transform: translateY(-160px);
+    height: 60px;
 }
 
 .legend-box{
-    border-radius: 10%;
-    color: rgb(236, 11, 11);
+    border-radius: 30px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: black;
 }
